--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
       "@/*": ["./src/*"],
       "@/constants": ["./src/constants/*"],
       "@/themeStorage": ["./src/constants/theme/*"],
+      "@/prompts": ["./src/constants/prompt/*"],
       "@/interfaces": ["./src/interfaces/*"],
       "@/utils": ["./src/utils/*"]
     }
