--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
