Added api services

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
       "@/themeStorage": ["./src/constants/theme/*"],
       "@/prompts": ["./src/constants/prompt/*"],
       "@/interfaces": ["./src/interfaces/*"],
-      "@/utils": ["./src/utils/*"]
+      "@/utils": ["./src/utils/*"],
+      "@/api": ["./src/api/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
