--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-markdown": "^9.0.1",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "@types/node": "^20",
