Added components for project

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,8 @@
       "@/interfaces": ["./src/interfaces/*"],
       "@/utils": ["./src/utils/*"],
       "@/api": ["./src/api/*"],
+      "@/assets": ["./src/assets/*"],
+      "@/images": ["./src/assets/images/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
