--- a/package.json
+++ b/package.json
@@ -11,16 +11,23 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@hookform/resolvers": "^3.9.1",
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
+    "@mui/x-data-grid": "^7.22.1",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
+    "moment": "^2.30.1",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react-hook-form": "^7.53.1",
     "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "swiper": "^11.1.14",
+    "swr": "^2.2.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
