--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-date-pickers": "^7.22.1",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
+    "gsap": "^3.12.5",
     "moment": "^2.30.1",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
